wacc/test/golden/syntaxErr.while.donoErr
# done typo

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
  while false do
    skip
  dono
end


Syntax error in test/wacc_examples/invalid/syntaxErr/while/donoErr.wacc (line 14, column 3):
unexpected "dono"
expected ";" or done
unclosed while loop

>     skip
>   dono
>   ^^^^
> end

